tests/error/array_errors/use_after_subscript.err
Error: Copy violation (at $FILE:12:15)
   | 
10 | @guppy
11 | def main(qs: array[qubit, 42] @owned) -> array[qubit, 42]:
12 |     return foo(qs[0], qs)
   |                ^^^^^ Variable `qs` with non-copyable type `array[qubit, 42]`
   |                      cannot be borrowed ...
   | 
12 |     return foo(qs[0], qs)
   |                       -- since it was already consumed here

Guppy compilation failed due to 1 previous error
